Fix horizontal overflow on smaller screens

--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -32,7 +32,7 @@ body {
 .container {
   padding: 40px;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
